# dxkb

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
crates/dxkb-common/: Cargo.toml
crates/dxkb-common/src/: bus.rs  clock.rs  devlog.rs  key.rs  lib.rs  time.rs
crates/dxkb-common/src/util/: bitarray.rs  bitmatrix.rs  bounded_index.rs  const_expr.rs  const_num.rs  frombytes.rs  mod.rs  ringbuffer.rs  slice.rs
crates/dxkb-core/: Cargo.toml
crates/dxkb-core/src/: debug.rs  def_key.rs  hid.rs  keyboard.rs  keys.rs  lib.rs  log.rs  usb.rs
crates/dxkb-lily58l-stemcell/: Cargo.toml
crates/dxkb-lily58l-stemcell/src/: config.rs  layout.rs  main.rs
crates/dxkb-main/: Cargo.toml
crates/dxkb-main/.cargo/: config
crates/dxkb-main/src/: layout.rs  lib.rs  main.rs
crates/dxkb-main/src/targets/lily58l/: layout.rs  main.rs
crates/dxkb-main/src/targets/testing/: main.rs
crates/dxkb-main/src/targets/testkb_3x5/: keys.rs  main.rs
crates/dxkb-main/src/targets/testkb_4x4/: main.rs
crates/dxkb-peripheral/: Cargo.toml
crates/dxkb-peripheral/src/: clock.rs  dma.rs  gpio.rs  key_matrix.rs  lib.rs  pin_set.rs  uart_dma_rb.rs  usart.rs  usb.rs
crates/dxkb-proc-macros/: Cargo.toml
crates/dxkb-proc-macros/src/: keymap.rs  lib.rs
crates/dxkb-split-link/: Cargo.toml
crates/dxkb-split-link-tester/: Cargo.toml  test  test.rs
crates/dxkb-split-link-tester/src/: logger.rs  main.rs
crates/dxkb-split-link/src/: lib.rs
openocd/: left-adapter.cfg  right-adapter.cfg  stm32f411.cfg
research/Column Capacitance/: NOTES.md
research/Column Crosstalk/: NOTES.md
src/: hid.rs  main.rs
src/periph/: cycle_counter.rs  gpio.rs  key_matrix.rs  mod.rs  uart_dma_rb.rs
src/split_bus/: link.rs  mod.rs
src/util/: mod.rs
testing-split-kb/: fp-info-cache  fp-lib-table  testing-split-kb.kicad_pcb  testing-split-kb.kicad_prl  testing-split-kb.kicad_pro  testing-split-kb.kicad_sch
testing-split-kb-3w-4layers-compact/: testing-split-kb-3w-4layers-compact.kicad_pcb  testing-split-kb-3w-4layers-compact.kicad_prl  testing-split-kb-3w-4layers-compact.kicad_pro
testing-split-kb-3w-4layers-compact/TestingSplitKb.pretty/: D_DO-35_SOD27_P7.62mm_Horizontal_BothSides.kicad_mod  TigerBite.kicad_mod
testing-split-kb-3w-4layers-compact/production/: designators.csv  netlist.ipc  positions.csv
testing-split-kb-3w-4layers-fullsize/: testing-split-kb.kicad_pcb  testing-split-kb.kicad_prl  testing-split-kb.kicad_sch
testing-split-kb-3w-4layers-fullsize/production/: designators.csv  netlist.ipc  positions.csv
testing-split-kb-3w-guard-pours/: testing-split-kb-3w-guard-pours.kicad_pcb  testing-split-kb-3w-guard-pours.kicad_prl  testing-split-kb-3w-guard-pours.kicad_pro
testing-split-kb-3w-guard-pours/TestingSplitKb.pretty/: Alasca.kicad_mod  Kailh_socket_MX_reversible.kicad_mod
testing-split-kb-3w-guard-pours/production/: bom.csv  netlist.ipc  testing-split-kb-3w-guard-pours-B_Cu.gbl  testing-split-kb-3w-guard-pours-B_Mask.gbs  testing-split-kb-3w-guard-pours-B_Paste.gbp  testing-split-kb-3w-guard-pours-B_Silkscreen.gbo  testing-split-kb-3w-guard-pours-Edge_Cuts.gm1  testing-split-kb-3w-guard-pours-F_Cu.gtl  testing-split-kb-3w-guard-pours-F_Mask.gts  testing-split-kb-3w-guard-pours-F_Paste.gtp  testing-split-kb-3w-guard-pours-F_Silkscreen.gto  testing-split-kb-3w-guard-pours-NPTH-drl_map.gbr  testing-split-kb-3w-guard-pours-NPTH.drl  testing-split-kb-3w-guard-pours-PTH-drl_map.gbr  testing-split-kb-3w-guard-pours-PTH.drl
testing-split-kb-3w-no-ground/: .gitignore  testing-split-kb-3w-no-ground.kicad_pcb  testing-split-kb-3w-no-ground.kicad_prl  testing-split-kb-3w-no-ground.kicad_pro  testing-split-kb-3w-no-ground.kicad_sch
testing-split-kb-3w-no-ground/production/: bom.csv  netlist.ipc  positions.csv
testing-split-kb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
