[package]
name = "dxkb-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["stm32f411"]
stm32f411 = ["stm32f4xx-hal/stm32f411", "dxkb-peripheral/stm32f411"]

[dependencies]
dxkb-common = { path = "../dxkb-common", features = ["dev-log-level-trace"] }
dxkb-peripheral = { path = "../dxkb-peripheral" }
dxkb-split-link = { path = "../dxkb-split-link" }

crc = { workspace = true }
serde = { workspace = true }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
itm_logger = { workspace = true }
log = { workspace = true }
panic-itm = { workspace = true }
ringbuffer = { workspace = true, default-features = false }
seq-macro = { workspace = true }
ssmarshal = { workspace = true, default-features = false }
stm32f4xx-hal = { workspace = true, features = ["usb_fs"] }
synopsys-usb-otg = { workspace = true, features = ["cortex-m", "fs"] }
usb-device = { workspace = true }
usbd-hid = { workspace = true }
vcell = { workspace = true }
crabtime = { workspace = true }
heapless = { workspace = true }
zerocopy = { workspace = true }
bitflags.workspace = true
hut.workspace = true

[build-dependencies]
usbd-hid = "0.8.2"
