[package]
name = "dxkb-peripheral"
version = "0.1.0"
edition = "2024"

[features]
stm32f411 = ["stm32f4xx-hal/stm32f411"]

[dependencies]
dxkb-common = { path = "../dxkb-common" }

ringbuffer = { workspace = true }
stm32f4xx-hal = { workspace = true }
cortex-m = { workspace = true }
seq-macro = { workspace = true }
vcell = { workspace = true }
enumflags2 = "*"
