[package]
name = "dxkb-split-link-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
dxkb-split-link = { path = "../dxkb-split-link" }
dxkb-common = { path = "../dxkb-common", features = ["dev-log-level-trace"] }
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
nix = { version = "0.29.0", features = ["poll", "time"] }
serial2 = { version = "0.2.28", features = ["unix"] }
serialport = "4.7.0"
rustyline = "15.0.0"
log.workspace = true
flexi_logger = "0.29.8"
serde = { workspace = true, features = ["derive"] }
