[package]
name = "dxkb-split-link"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO Disble dev-log through a feature
dxkb-common = { path = "../dxkb-common" }
ringbuffer = { workspace = true, default-features = false }
crc = { workspace = true }
ssmarshal = { workspace = true }
serde = { workspace = true }
heapless = { workspace = true }
